fix: resolve UI and deployment issues

--- a/nginx-sogangcomputerclub.conf
+++ b/nginx-sogangcomputerclub.conf
@@ -11,6 +11,8 @@ server {
         try_files $uri =404;
     }
 
+
+
     location /api/ {
         proxy_pass http://fastapi_backend/api/;
         proxy_http_version 1.1;
@@ -24,8 +26,15 @@ server {
         proxy_read_timeout 90;
     }
 
-    location /memos/ {
-        proxy_pass http://fastapi_backend/memos/;
+    location /health {
+        proxy_pass http://fastapi_backend/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_read_timeout 90;
+    }
+
+    location /study {
+        proxy_pass http://host.docker.internal:8090/study;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -36,8 +45,15 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 90;
     }
-    
-    # All other routes to SvelteKit Node.js app
+
+    location ~ ^/study/_app/(.*)$ {
+        proxy_pass http://host.docker.internal:8090/_app/$1;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_cache_valid 200 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+
     location / {
         proxy_pass http://sveltekit_app;
         proxy_http_version 1.1;
@@ -57,7 +73,6 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 }
 
-# HTTPS server (commented out until SSL certificates are available)
 server {
      listen 443 ssl;
      listen [::]:443 ssl;
@@ -71,8 +86,9 @@ server {
      add_header X-Frame-Options DENY always;
      add_header X-Content-Type-Options nosniff always;
      add_header X-XSS-Protection "0" always;
-     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
      
+
+
      location /api/ {
          proxy_pass http://fastapi_backend/api/;
          proxy_http_version 1.1;
@@ -86,8 +102,15 @@ server {
          proxy_read_timeout 90;
      }
      
-     location /memos/ {
-         proxy_pass http://fastapi_backend/memos/;
+     location /health {
+         proxy_pass http://fastapi_backend/health;
+         proxy_http_version 1.1;
+         proxy_set_header Host $host;
+         proxy_read_timeout 90;
+     }
+
+     location /study {
+         proxy_pass http://host.docker.internal:8090/study;
          proxy_http_version 1.1;
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection 'upgrade';
@@ -98,7 +121,15 @@ server {
          proxy_cache_bypass $http_upgrade;
          proxy_read_timeout 90;
      }
-     
+
+     location ~ ^/study/_app/(.*)$ {
+         proxy_pass http://host.docker.internal:8090/_app/$1;
+         proxy_http_version 1.1;
+         proxy_set_header Host $host;
+         proxy_cache_valid 200 1y;
+         add_header Cache-Control "public, max-age=31536000, immutable";
+     }
+
      location / {
          proxy_pass http://sveltekit_app;
          proxy_http_version 1.1;
