--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,14 +63,40 @@ services:
     networks:
       - app-network
 
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=production
+    depends_on:
+      - fastapi
+    networks:
+      - app-network
+
   nginx:
     image: nginx:alpine
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx-sogangcomputerclub.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx-entrypoint.sh:/usr/local/bin/nginx-entrypoint.sh:ro
+      - /var/lib/letsencrypt:/var/lib/letsencrypt
+    entrypoint: ["/usr/local/bin/nginx-entrypoint.sh"]
+    command: >
+      /bin/sh -c "
+        apk add --no-cache openssl &&
+        mkdir -p /etc/letsencrypt/live/sogangcomputerclub.org &&
+        openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/letsencrypt/live/sogangcomputerclub.org/privkey.pem -out /etc/letsencrypt/live/sogangcomputerclub.org/fullchain.pem -subj '/CN=sogangcomputerclub.org' &&
+        nginx -g 'daemon off;'
+      "
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - fastapi
+      - frontend
     networks:
       - app-network
 
