--- a/nginx.conf
+++ b/nginx.conf
@@ -33,21 +33,15 @@ http {
     gzip_min_length 1000;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
-    # Kubernetes Ingress Controller upstream (handles both frontend and backend)
-    upstream kubernetes_ingress {
-        server 127.0.0.1:8090;
-        keepalive 32;
-    }
-
-    # FastAPI backend upstream (alias to ingress)
+    # FastAPI backend upstream
     upstream fastapi_backend {
-        server 127.0.0.1:8090;
+        server fastapi:8000;
         keepalive 32;
     }
 
-    # SvelteKit Node.js app upstream (alias to ingress)
+    # SvelteKit frontend upstream
     upstream sveltekit_app {
-        server 127.0.0.1:8090;
+        server frontend:3000;
         keepalive 32;
     }
 
