프로젝트 안정화 + 구조 변경

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -10,7 +10,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: sogangcomputerclub.org
+    http:
       paths:
       - path: /api(/|$)(.*)
         pathType: ImplementationSpecific
@@ -30,7 +31,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: sogangcomputerclub.org
+    http:
       paths:
       - path: /health
         pathType: Exact
@@ -64,7 +66,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: sogangcomputerclub.org
+    http:
       paths:
       - path: /
         pathType: Prefix
