--- a/.gitignore
+++ b/.gitignore
@@ -21,43 +21,47 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+# Virtual Environments
 venv/
 env/
 ENV/
+.venv/
 
 # Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 .npm
 .eslintcache
+.pnpm-store/
 
 # Frontend Build Output
-.output
-.vercel
-.netlify
-.wrangler
-/.svelte-kit
-/build
-/dist
+.output/
+.vercel/
+.netlify/
+.wrangler/
+.svelte-kit/
+frontend/build/
+frontend/dist/
+frontend/.svelte-kit/
 
 # Logs
-logs
+logs/
 *.log
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
+# Test Coverage
 coverage/
 *.lcov
-
-# nyc test coverage
-.nyc_output
+.nyc_output/
 
 # OS generated files
 .DS_Store
@@ -67,19 +71,42 @@ coverage/
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-# Editor files
 *.swp
 *.swo
 *~
+
+# Editor files
 .vscode/
 .idea/
+*.sublime-project
+*.sublime-workspace
 
 # Environment files
 .env
 .env.*
 !.env.example
-!.env.test
+!.env.template
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Docker
+.dockerignore
+
+# Backups
+backups/*.sql
+backups/*.sql.gz
+backups/*.tar.gz
+backups/backup.log
+!backups/README.md
+
+# SSL Certificates
+*.pem
+*.key
+*.crt
+*.csr
 
 # Vite
 vite.config.js.timestamp-*
@@ -88,3 +115,11 @@ vite.config.ts.timestamp-*
 # Temporary files
 *.tmp
 *.temp
+*.bak
+*.backup
+*.orig
+
+# Claude AI
+.claude/
+.claude.json
+.claude.json.backup
