--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
   redis:
     image: redis:7-alpine
     ports:
-      - "6379:6379"
+      - "6380:6379"
     volumes:
       - redis_data:/data
     networks:
@@ -69,6 +69,8 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
+      - HOST=0.0.0.0
+      - PORT=3000
     depends_on:
       - fastapi
     networks:
@@ -81,28 +83,37 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx-sogangcomputerclub.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./nginx-entrypoint.sh:/usr/local/bin/nginx-entrypoint.sh:ro
-      - /var/lib/letsencrypt:/var/lib/letsencrypt
-    entrypoint: ["/usr/local/bin/nginx-entrypoint.sh"]
-    command: >
-      /bin/sh -c "
-        apk add --no-cache openssl &&
-        mkdir -p /etc/letsencrypt/live/sogangcomputerclub.org &&
-        openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/letsencrypt/live/sogangcomputerclub.org/privkey.pem -out /etc/letsencrypt/live/sogangcomputerclub.org/fullchain.pem -subj '/CN=sogangcomputerclub.org' &&
-        nginx -g 'daemon off;'
-      "
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - ./nginx-sogangcomputerclub.conf:/etc/nginx/conf.d/sogangcomputerclub.conf:ro
+      - ./nginx.sh:/nginx.sh
+      - certbot_certs:/etc/letsencrypt
+    entrypoint: /bin/sh
+    command: -c "/nginx.sh"
     depends_on:
       - fastapi
       - frontend
     networks:
       - app-network
 
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - certbot_certs:/etc/letsencrypt
+      - ./frontend/build:/var/www/html
+      - ./certbot.sh:/certbot.sh
+      - /var/run/docker.sock:/var/run/docker.sock
+    entrypoint: /bin/sh
+    command: -c "/certbot.sh"
+    networks:
+      - app-network
+    depends_on:
+      - nginx
+    links:
+      - nginx
+
 volumes:
   mariadb_data:
   redis_data:
+  certbot_certs:
 
 networks:
   app-network:
