--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/adapter-node": "^5.3.1",
+		"@sveltejs/adapter-node": "^5.3.3",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -49,11 +49,13 @@
 	],
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.11",
+		"@types/dompurify": "^3.0.5",
+		"@types/marked": "^5.0.2",
 		"date-fns": "^4.1.0",
-		"dompurify": "^3.2.6",
+		"dompurify": "^3.2.7",
 		"highlight.js": "^11.11.1",
 		"jsdom": "^26.1.0",
-		"marked": "^16.1.2",
+		"marked": "^16.3.0",
 		"marked-highlight": "^2.2.2",
 		"tailwindcss": "^4.1.11"
 	}
