--- a/nginx-sogangcomputerclub.conf
+++ b/nginx-sogangcomputerclub.conf
@@ -1,20 +1,18 @@
 server {
-    listen 80;
+    listen 80 default_server;
     server_name localhost sogangcomputerclub.org www.sogangcomputerclub.org;
     access_log /var/log/nginx/sogangcomputerclub.access.log;
     error_log /var/log/nginx/sogangcomputerclub.error.log;
     
-    location ^~ /.well-known/acme-challenge/ {
+    location ~ /.well-known/acme-challenge/ {
         allow all;
-        root /var/lib/letsencrypt/;
-        default_type "text/plain";
-        try_files $uri =404;
+        root /var/www/html;
     }
 
 
 
     location /api/ {
-        proxy_pass http://fastapi_backend/api/;
+        proxy_pass http://fastapi:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -27,35 +25,14 @@ server {
     }
 
     location /health {
-        proxy_pass http://fastapi_backend/health;
+        proxy_pass http://fastapi:8000/health;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_read_timeout 90;
-    }
-
-    location /study {
-        proxy_pass http://host.docker.internal:8090/study;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        proxy_read_timeout 90;
-    }
-
-    location ~ ^/study/_app/(.*)$ {
-        proxy_pass http://host.docker.internal:8090/_app/$1;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_cache_valid 200 1y;
-        add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
     location / {
-        proxy_pass http://sveltekit_app;
+        proxy_pass http://frontend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -74,7 +51,7 @@ server {
 }
 
 server {
-     listen 443 ssl;
+     listen 443 ssl default_server;
      listen [::]:443 ssl;
      http2 on;
      server_name sogangcomputerclub.org www.sogangcomputerclub.org;
@@ -90,7 +67,7 @@ server {
 
 
      location /api/ {
-         proxy_pass http://fastapi_backend/api/;
+         proxy_pass http://fastapi:8000/;
          proxy_http_version 1.1;
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection 'upgrade';
@@ -103,35 +80,14 @@ server {
      }
      
      location /health {
-         proxy_pass http://fastapi_backend/health;
+         proxy_pass http://fastapi:8000/health;
          proxy_http_version 1.1;
          proxy_set_header Host $host;
          proxy_read_timeout 90;
-     }
-
-     location /study {
-         proxy_pass http://host.docker.internal:8090/study;
-         proxy_http_version 1.1;
-         proxy_set_header Upgrade $http_upgrade;
-         proxy_set_header Connection 'upgrade';
-         proxy_set_header Host $host;
-         proxy_set_header X-Real-IP $remote_addr;
-         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-         proxy_set_header X-Forwarded-Proto $scheme;
-         proxy_cache_bypass $http_upgrade;
-         proxy_read_timeout 90;
-     }
-
-     location ~ ^/study/_app/(.*)$ {
-         proxy_pass http://host.docker.internal:8090/_app/$1;
-         proxy_http_version 1.1;
-         proxy_set_header Host $host;
-         proxy_cache_valid 200 1y;
-         add_header Cache-Control "public, max-age=31536000, immutable";
      }
 
      location / {
-         proxy_pass http://sveltekit_app;
+         proxy_pass http://frontend:3000;
          proxy_http_version 1.1;
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection 'upgrade';
