--- a/nginx.conf
+++ b/nginx.conf
@@ -33,19 +33,31 @@ http {
     gzip_min_length 1000;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
-    # FastAPI backend upstream
-    upstream fastapi_backend {
-        server fastapi:8000;
-        keepalive 32;
-    }
-
-    # SvelteKit frontend upstream
-    upstream sveltekit_app {
-        server frontend:3000;
+    # Kubernetes Ingress Controller upstream (handles both frontend and backend)
+    upstream kubernetes_ingress {
+        server 127.0.0.1:30080; # This should be the IP and NodePort of your Nginx Ingress Controller
         keepalive 32;
     }
 
     # Include additional site configs
     include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
+
+    # Main server configuration is in nginx-sogangcomputerclub.conf
+    # Commented out to avoid duplicate server name conflicts
+    # server {
+    #     listen 80;
+    #     listen 443 ssl;
+    #     server_name sogangcomputerclub.org www.sogangcomputerclub.org;
+    #
+    #     ssl_certificate /etc/letsencrypt/live/sogangcomputerclub.org/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/sogangcomputerclub.org/privkey.pem;
+    #
+    #     location / {
+    #         proxy_pass http://kubernetes_ingress;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #     }
+    # }
 }
