--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "aioredis==2.0.1",
     "aiosqlite==0.20.0",
     "fastapi==0.115.2",
+    "greenlet>=3.0.0",
+    "icmplib>=3.0.4",
     "pydantic==2.9.2",
     "python-json-logger==2.0.7",
     "redis==5.1.0",
