--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ dependencies = [
     "uvicorn==0.32.0",
 ]
 
+[dependency-groups]
+dev = [
+    "pytest>=8.3.0",
+    "pytest-asyncio>=0.24.0",
+    "httpx>=0.27.0",
+]
+
 [tool.uv]
 package = true
 
