fix: 파트별 브랜치에서 먼저 자동 테스트가 이루어지도록 수정함.

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -2,7 +2,7 @@ name: Frontend CI
 
 on:
   push:
-    branches: [ main, master, develop, feature/CI-CD ]
+    branches: [ main, master, develop, 'feature/frontend-*' ]
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend-ci.yml'
