--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -2,7 +2,7 @@ name: Backend CI
 
 on:
   push:
-    branches: [ main, master, develop, feature/backend-tests ]
+    branches: [ main, master, develop, 'feature/backend-*' ]
     paths:
       - 'app/**'
       - 'tests/**'
