--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -4,6 +4,11 @@ metadata:
   name: app-config
   namespace: sgcc-memo
 data:
-  DATABASE_URL: "mysql+aiomysql://memo_user:phoenix@mariadb-service:3306/memo_app"
+  # NOTE: Database password is injected via Secret in the deployment
+  # Use format: mysql+aiomysql://memo_user:$(DATABASE_PASSWORD)@mariadb-service:3306/memo_app
+  DATABASE_HOST: "mariadb-service"
+  DATABASE_PORT: "3306"
+  DATABASE_NAME: "memo_app"
+  DATABASE_USER: "memo_user"
   REDIS_URL: "redis://redis-service:6379"
   KAFKA_BOOTSTRAP_SERVERS: "kafka-service:9092"
