--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=${DATABASE_URL:-mysql+aiomysql://memo_user:changeme@mariadb:3306/memo_app}
+      - DATABASE_URL=${DATABASE_URL:-mysql+aiomysql://memo_user:phoenix@mariadb:3306/memo_app}
       - REDIS_URL=${REDIS_URL:-redis://redis:6379}
-      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS:-kafka:9092}
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS:-kafka:9093}
     depends_on:
       - mariadb
       - redis
@@ -19,10 +19,10 @@ services:
   mariadb:
     image: mariadb:10.11
     environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-changeme_root}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-phoenix}
       - MYSQL_DATABASE=${MYSQL_DATABASE:-memo_app}
       - MYSQL_USER=${MYSQL_USER:-memo_user}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-changeme}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-phoenix}
     ports:
       - "3306:3306"
     volumes:
@@ -53,13 +53,15 @@ services:
       - zookeeper
     ports:
       - "9092:9092"
+      - "9093:9093"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: INTERNAL://0.0.0.0:9093,EXTERNAL://0.0.0.0:9092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9093,EXTERNAL://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
     networks:
       - app-network
 
