--- a/k8s/fastapi-production.yaml
+++ b/k8s/fastapi-production.yaml
@@ -2,9 +2,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fastapi
-  namespace: sgcc-local
+  namespace: sgcc
 spec:
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: fastapi
@@ -12,38 +17,54 @@ spec:
     metadata:
       labels:
         app: fastapi
+        version: v1
     spec:
+      imagePullSecrets:
+      - name: ghcr-secret
       containers:
       - name: fastapi
-        image: sgcc-fastapi:latest
-        imagePullPolicy: Never
+        image: ghcr.io/OWNER/REPO/backend:latest  # This will be updated by CI/CD
+        imagePullPolicy: Always
         ports:
         - containerPort: 8000
         envFrom:
         - configMapRef:
             name: app-config
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
         livenessProbe:
           httpGet:
             path: /health
             port: 8000
           initialDelaySeconds: 30
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /health
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: fastapi-service
-  namespace: sgcc-local
+  namespace: sgcc
 spec:
   selector:
     app: fastapi
   ports:
   - port: 8000
     targetPort: 8000
+    protocol: TCP
   type: ClusterIP
+  sessionAffinity: ClientIP
