--- a/k8s/frontend-production.yaml
+++ b/k8s/frontend-production.yaml
@@ -2,9 +2,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
-  namespace: sgcc-local
+  namespace: sgcc
 spec:
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: frontend
@@ -12,11 +17,14 @@ spec:
     metadata:
       labels:
         app: frontend
+        version: v1
     spec:
+      imagePullSecrets:
+      - name: ghcr-secret
       containers:
       - name: frontend
-        image: sgcc-frontend:latest
-        imagePullPolicy: Never
+        image: ghcr.io/OWNER/REPO/frontend:latest  # This will be updated by CI/CD
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
         env:
@@ -24,28 +32,41 @@ spec:
           value: "production"
         - name: BACKEND_URL
           value: "http://fastapi-service:8000"
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "200m"
         livenessProbe:
           httpGet:
             path: /
             port: 3000
           initialDelaySeconds: 30
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /
             port: 3000
           initialDelaySeconds: 5
           periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-  namespace: sgcc-local
+  namespace: sgcc
 spec:
   selector:
     app: frontend
   ports:
   - port: 3000
     targetPort: 3000
+    protocol: TCP
   type: ClusterIP
+  sessionAffinity: ClientIP
