--- a/k8s/kafka.yaml
+++ b/k8s/kafka.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: zookeeper
-  namespace: sgcc-memo
+  namespace: sgcc
 spec:
   replicas: 1
   selector:
@@ -28,7 +28,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zookeeper-service
-  namespace: sgcc-memo
+  namespace: sgcc
 spec:
   selector:
     app: zookeeper
@@ -40,7 +40,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kafka
-  namespace: sgcc-memo
+  namespace: sgcc
 spec:
   replicas: 1
   selector:
@@ -74,7 +74,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka-service
-  namespace: sgcc-memo
+  namespace: sgcc
 spec:
   selector:
     app: kafka
