--- a/k8s/mariadb.yaml
+++ b/k8s/mariadb.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mariadb
-  namespace: sgcc-memo
+  namespace: sgcc
 spec:
   serviceName: mariadb-service
   replicas: 1
@@ -50,7 +50,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mariadb-service
-  namespace: sgcc-memo
+  namespace: sgcc
 spec:
   selector:
     app: mariadb
