--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -120,7 +120,7 @@ jobs:
         fetch-depth: 0
 
     - name: TruffleHog OSS
-      uses: trufflesecurity/trufflehog@main
+      uses: trufflesecurity/trufflehog@v3.82.13
       with:
         path: ./
         base: ${{ github.event.repository.default_branch }}
